# AMP_ASSv1

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  README.md  amd64-docker.sh  build.sh  convert_rosout_log.py  feather_32u4_RFM95_lora_rx.ino  install_ros_dependencies.sh  kai_script.sh
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml
PCB/: Drivetrain_control.b#1  Drivetrain_control.b#2  Drivetrain_control.b#3  Drivetrain_control.b#4  Drivetrain_control.b#5  Drivetrain_control.b#6  Drivetrain_control.b#7  Drivetrain_control.b#9  Drivetrain_control.brd  Drivetrain_control.s#1  Drivetrain_control.s#2  Drivetrain_control.s#3  Drivetrain_control.s#4  Drivetrain_control.s#5  Drivetrain_control.s#6  Drivetrain_control.s#7  Drivetrain_control.s#8  Drivetrain_control.sch
PCB/Blinky/: Blinky-cache.lib  Blinky.kicad_pcb  Blinky.kicad_pcb-bak  Blinky.pro  Blinky.sch  Blinky.sch-bak  BlinkyLibary.lib  fp-lib-table  sym-lib-table
PCB/Blinky/Blinky.pretty/: S8211-46R.kicad_mod
PCB/Blinky/Gerbers/: Blinky-B_Cu.gbr  Blinky-B_Mask.gbr  Blinky-B_Paste.gbr  Blinky-B_SilkS.gbr  Blinky-Edge_Cuts.gbr  Blinky-F_Cu.gbr  Blinky-F_Mask.gbr  Blinky-F_Paste.gbr  (+2 more)
PCB/PCB_new/: LAUNCHXL-F28379D_Breakout.sch  LAUNCHXL-F28379D_Breakout.sch-bak  LAUNCHXL-F28379D_Headers.sch  LAUNCHXL-F28379D_Headers.sch-bak  PCB_2020-cache.lib  PCB_2020-rescue.lib  PCB_2020.dcm  PCB_2020.kicad_pcb  PCB_2020.kicad_pcb-bak  PCB_2020.lib  PCB_2020.pro  PCB_2020.sch  PCB_2020.sch-bak  PCB_2020_BOM.xlsx  PCB_2020_Board-cache.lib  PCB_2020_Board-rescue.lib  PCB_HEADERS_2020-cache.lib  PCB_HEADERS_2020-rescue.lib  _autosave-LAUNCHXL-F28379D_Breakout.sch  _autosave-LAUNCHXL-F28379D_Headers.sch  _autosave-PCB_2020.kicad_pcb  fp-info-cache  fp-lib-table  log.txt  sym-lib-table
PCB/PCB_old/: Drivetrain_control.b#3  Drivetrain_control.b#5  Drivetrain_control.b#8  Drivetrain_control.brd  Drivetrain_control.s#1  Drivetrain_control.s#2  Drivetrain_control.s#3  Drivetrain_control.s#7  Drivetrain_control.s#9
TI_examples/: F2837xD_v210_manifest.html
bagfiles/: test2.bag  test3.bag  test4.bag
devel/: setup.sh
docker/: amd64.Dockerfile
docs/: pull_request_template.md
launch/: VLP16_mapping.launch  velodyne.launch
new files/: amp_serial_jetson_SERIAL_TEST.cpp  interrupt.h  kart.h  outputTester.cpp  serial.h  steering.h
old/src/ti_comm/: CMakeLists.txt
old/src/ti_comm/src/: Makefile  README.md  amp_serial_jetson_ECU_TEST.cpp  amp_serial_jetson_SERIAL_TEST.cpp
old/src/ti_comm/src/libserialport-0.1.0/: ChangeLog  aclocal-1.14  libtool
old/src/ti_comm/src/libserialport-0.1.0/autom4te.cache/: output.1  traces.1
old/src/ti_comm/src/new_lib/: amp_serial_jetson_ECU_TEST  amp_serial_jetson_ECU_TEST.cpp
src/AMP_ECU/: .cproject  .project  amp_cmpss.c  amp_cmpss.h  amp_control.c  amp_control.h  amp_cpu_timer.c  amp_cpu_timer.h  amp_dac.c  amp_eQEP.c  amp_err.h  amp_gpio.c  amp_gpio.h  amp_interrupts.c  amp_pwm.c  amp_serial.c  amp_serial.h  amp_service.c  amp_service.h  amp_timer.c  amp_timer.h  main.c  util.h
src/clear_map/: CMakeLists.txt  package.xml
src/kart_2dnav/: CMakeLists.txt  package.xml
src/kart_2dnav/launch/: frames.gv  kart_in_stage.launch  kart_physical.launch  kart_rosbag.launch  move_base.launch  navigation.launch  robot_carlike_in_stage.launch  robot_racetrack.launch  sbg_ellipseN.launch  sim_autocross_track.launch  sim_autocross_track_only_goal_setting.launch
src/kart_2dnav/launch/archived/: navigation_old.launch  robot_pose_ekf.launch
src/kart_2dnav/launch/kart/: gmapping.launch  hector_navigation.launch  imu_filter_madgwick.launch  kart_rosbag.launch  laser_scan_matcher.launch  move_base.launch  navigation.launch  pointcloud_to_laserscan.launch  sim_rosbag.launch  teb_local_planner_move_base.launch
src/kart_2dnav/launch/kart/archived/: gmapping_navigation.launch  kart_configuration.launch  pointcloud_to_laserscan.launch  robot_localization.launch
src/kart_2dnav/launch/sim/: kartbot_racetrack.launch  robot_indy_500.launch  robot_racetrack.launch  sim_autocross_track.launch  sim_square_track.launch  tightspace.launch
src/kart_2dnav/maps/: indy_500.xcf  indy_500.yaml  racetrack.yaml  square.yaml  tightspace.yaml
src/kart_2dnav/params/: base_local_planner_params.yaml  costmap_common_params.yaml  frames.gv  global_costmap_params.yaml  hector_mapping_params.yaml  imu_filter_madgwick_params.yaml  laser_scan_matcher_params.yaml  local_costmap_params.yaml  pointcloud_to_laserscan_params.yaml  robot_localization_params.yaml  slam_gmapping_params.yaml  teb_local_planner_params.yaml
src/kart_2dnav/params/inactive/: amcl_params.yaml  robot_pose_ekf_params.yaml  slam_gmapping_params.yaml
src/kart_2dnav/params/sim_params/: costmap_common_params.yaml
src/kart_2dnav/stage/: autocross_track.world  indy_500.world  maze_carlike.world  racetrack.world  square_track.world  tightspace.world
src/kart_2dnav/stage/robots/: kart.inc
src/kart_setup_lidar_tf/: CMakeLists.txt
src/kart_setup_odom_tf/: CMakeLists.txt  package.xml
src/laser_scan_matcher_odom/: CMakeLists.txt
src/logger/: logger.cpp
src/sbg_to_imu/: CMakeLists.txt  package.xml  setup.py
src/slam_mode_goal/: CMakeLists.txt  package.xml  setup.py
src/stage_ros_mod_tf/: CMakeLists.txt  package.xml
src/static_tf_config/: CMakeLists.txt  package.xml
src/ti_comm/: CMakeLists.txt  package.xml
ti_code/: README
ti_code/AMP_ECU/: .ccsproject  .cproject  amp_cart_state.h  amp_control.c  amp_control.h  amp_dac.h  amp_eQEP.c  amp_eQEP.h  amp_err.c  amp_err.h  amp_gpio.c  amp_gpio.h  amp_interrupts.c  amp_interrupts.h  amp_pwm.c  amp_pwm.h  amp_serial.c  amp_serial.h  amp_service.c  amp_service.h  main.c  util.c
ti_code/AMP_control_coolterm/: main.c
ti_code/AMP_pwm_control/: .ccsproject  .cproject  .project  main.c
ti_code/CMPSS_test/: .cproject  .project  main.c
ti_code/cla_pi_test/: .ccsproject  .cproject  .project  F2837xD_EQep.c  cla_adc_fir32_shared.h  main.c
ti_code/pwm_test/: .ccsproject  .cproject  .project  main.c
ti_code/sci_test/: .cproject  .project  main.c
(+800 files in other folders)
